Page MenuHome GnuPG

show-unusable-subkeys claims "expired: never" when primary key is expired
Closed, ResolvedPublic

Description

If you have a subkey with no expiration date, but the associated primary key is expired, and you use --list-options show-unusable-subkeys, the result is a line like:

sub   rsa4096 2014-01-25 [E] [expired: never     ]

This is confusing, and should probably be made less-confusing.

Details

Version
2.1.22, 1.4.22

Event Timeline

werner triaged this task as Normal priority.Aug 8 2017, 7:31 PM
werner added a project: gnupg.
werner added a subscriber: werner.

Funny. We should make show-unusable-subkeys the default to detect such flaws ;-)

gniibe changed the task status from Open to Testing.May 23 2019, 2:41 AM
gniibe claimed this task.
gniibe added a subscriber: gniibe.

There is also a confusing case: a subkey expiration date is set, but the associated primary key is expired.
Pushing a fix in master.